--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">MauHolidays</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-<<<<<<< Updated upstream
     <string name="title_activity_inter9">inter9</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -20,14 +19,7 @@
         <item>CAD-Canadian Dollar</item>
         <item>INR-Indian Rupees</item>
     </string-array>
-</resources>
-=======
-
-
+    <string name="title_activity_hotels">hotels</string>
 </resources>
 
 
-
-
-
->>>>>>> Stashed changes
